--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,47 @@ nav ul li a{
 nav ul li a:hover{
   color:red;
 }
+.heading{
+  margin-top: 15%;
+  margin-left: 15%;
+}
+h1{
+  font-size:50px;
+  margin-bottom:20px;
+  color:rgb(53, 53, 53)
+}
+.heading h1 span{
+  color:orange;
+}
+.heading p{
+  line-height:22px;
+  color:rgb(82, 80, 76);
+}
+.fa{
+  padding: 10px;
+  font-size: 20px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius:50%;
+  margin:5px;
+}
+.fa:hover{
+  opacity: 0.7;
+}
+.fa-github{
+  background:rgb(79, 190, 235);
+  color:white;
+}
+.fa-facebook{
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter{
+  background: #55ACEE;
+  color: white;
+}
+.fa-instagram{
+  background: rgb(46, 104, 158);
+  color:white;
+}
