--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,74 @@
+*{
+  padding:0;
+  margin:0;
+}
+
 body{
   font-family: sans-serif;
 }
-.navbar{
+
+.navbar {
+	width: 100%;
+	position: absolute;
+	z-index: 1;
+  /* width: 90%;
+  margin: auto;
+  padding-left:3em 0 5em; */
+}
+.navbar ul {
+	height: 50px;
+	float: right;
+}
+.navbar ul li {
+	display: inline-block;
+	padding: 40px 15px;
+	font-size: 20px;
+}
+nav ul li a{
+  text-decoration:none;
+  color:rgb(255, 255, 255);
+  font-weight:bold;
+}
+
+/* .navbar nav{
+  align-items: center;
+  justify-content: space-between;
+} */
+
+/* .navbar{
   position:relative;
   width:100%;
-  height: 20vh;
-  background:rgb(253, 253, 253);
-}
+  height: 15vh;
+} */
 .skatepng{
   width:auto;
-  height:100px;
+  height:120px;
 }
-nav{
+/* nav{
   display:flex;
   width:90%;
   margin:auto;
-  padding:10px 0;
+  padding:2px 0;
   align-items: center;
   justify-content: space-between;
 }
 nav ul li{
   display:inline-block;
   list-style:none;
-  margin:10px 20px;
+  margin:10px 42px;
 }
 nav ul li a{
   text-decoration:none;
   color:black;
   font-weight:bold;
-}
+} */
 nav ul li a:hover{
   color:red;
 }
+
 .heading{
   margin-top: 15%;
-  margin-left: 15%;
+  margin-left: 8%;
 }
 h1{
   font-size:50px;
@@ -43,11 +77,13 @@ h1{
 }
 .heading h1 span{
   color:orange;
+  font-family: cursive;
 }
 .heading p{
   line-height:22px;
-  color:rgb(82, 80, 76);
+  color:rgb(25, 25, 25);
 }
+
 .fa{
   padding: 10px;
   font-size: 20px;
@@ -55,24 +91,138 @@ h1{
   text-align: center;
   text-decoration: none;
   border-radius:50%;
-  margin:5px;
+  margin:15px 8px;
 }
 .fa:hover{
   opacity: 0.7;
 }
 .fa-github{
-  background:rgb(79, 190, 235);
+  background:rgb(255, 187, 0);
   color:white;
 }
 .fa-facebook{
-  background: #3B5998;
+  background: #ff7c02;
   color: white;
 }
 .fa-twitter{
-  background: #55ACEE;
+  background: #f75639;
   color: white;
 }
 .fa-instagram{
-  background: rgb(46, 104, 158);
+  background: rgb(216, 67, 41);
   color:white;
 }
+
+.shapes{
+  width:45%;
+  height:80%;
+  position:absolute;
+  bottom:0;
+  right:100px;
+}
+.shapes img{
+  height:100%;
+  position:absolute;
+  left:50%;
+  bottom:0;
+  transform:translate(-50%);
+  transition:bottom 1s, left 1s;
+}
+.shapes:hover .redshape {
+  bottom:45px;
+}
+.shapes:hover .person {
+  left:270px;
+}
+
+.repos{
+  width:80%;
+  margin:auto;
+  padding:3em;
+  display:grid;
+  grid-template-columns:repeat(5, 1fr);
+  grid-gap:1em;
+}
+.repos div{
+  background:rgb(243, 240, 240);
+}
+.repos div a{
+  text-decoration: none;
+  color:black;
+}
+.repos div a:hover{
+  color:red;
+}
+
+.animation-area {
+	background: linear-gradient(to left, #8942a8, #ba382f);
+	width: 100%;
+	height: 100vh;
+}
+.box-area {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+.box-area li {
+	position: absolute;
+	display: block;
+	list-style: none;
+	width: 25px;
+	height: 25px;
+	background: rgba(255, 255, 255, 0.2);
+	animation: animate 20s linear infinite;
+	bottom: -150px;
+}
+.box-area li:nth-child(1) {
+	left: 86%;
+	width: 80px;
+	height: 80px;
+	animation-delay: 0s;
+}
+.box-area li:nth-child(2) {
+	left: 12%;
+	width: 30px;
+	height: 30px;
+	animation-delay: 1.5s;
+	animation-duration: 10s;
+}
+.box-area li:nth-child(3) {
+	left: 70%;
+	width: 100px;
+	height: 100px;
+	animation-delay: 5.5s;
+}
+.box-area li:nth-child(4) {
+	left: 42%;
+	width: 150px;
+	height: 150px;
+	animation-delay: 0s;
+	animation-duration: 15s;
+}
+.box-area li:nth-child(5) {
+	left: 65%;
+	width: 40px;
+	height: 40px;
+	animation-delay: 0s;
+}
+.box-area li:nth-child(6) {
+	left: 15%;
+	width: 110px;
+	height: 110px;
+	animation-delay: 3.5s;
+}
+@keyframes animate {
+	0% {
+		transform: translateY(0) rotate(0deg);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(-800px) rotate(360deg);
+		opacity: 0;
+	}
+}
+
