--- a/css/styles.css
+++ b/css/styles.css
@@ -216,4 +216,11 @@ h1{
   margin:.7em 1.7em;
 }
 
+.about-page{
+  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+              linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+              linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+  width:100%;
+  height:100vh;
+}
 
